[To be released]

* Usability improvements
* Removed Browser Action [Chrome]
* Autocompletion for recently executed commands [Chrome]
* Options page more accessible via keyboard [Chrome]

1.6 (14/04/2010)

* Backup: Export/Import your gleeBox settings (also between Firefox and Chrome)
* Consistent Enter/Shift+Enter behavior for page commands
* Added support for AddThis
* !ext and !down page commands [Chrome only]
* Options page spruced up [Chrome only]
* Other Bugfixes

1.5 (14/03/2010)

* Glee Tab Manager: Manage currently open tabs [Chrome only]
* Customizable launch key for gleeBox
* gleeBox is cleared on executing yubnub commands and links via default search
* Added ability for sites to define their own ESP
* !v command to play/pause videos on YouTube [Chrome only]
* Editable items on Options page [Chrome only]
* Support for <button> element
* Updated to use jQuery 1.4.1
* Lots of CSS Fixes
* Improvements to scrolling
* !inspect command to get the jQuery selector for specific elements
* Ability to add visions/scrapers via set command
* Modified !tweet command so it also includes title of page being shared

1.1 (29/01/2010)

* Input elements of type button/submit added to default link search
* Text field input is now escaped for HTML tags
* Fixed CSS issues
* [Chrome] Keeping TAB pressed results in continuous scrolling
* [Chrome] Title text for browser action changes on click
* [Chrome] Changes to disabled urls in options are spread properly
* [Chrome] Fixed toggle of status using browser action
* [Chrome] Custom scrapers work properly when browser is first run

1.0.3 [Firefox Only]
* Replaced occurrences of eval with alternatives

1.0.2 [Firefox Only]
* Completely resolved the iframe issue where textfield/textarea inside an iframe wasn't accepting text input
* Fixed set command

1.0.1 [Firefox Only]
* Partly solved iframe issue where gleeBox was inserting HTML inside iframes

1.0

* Custom scraper commands
* ESP mode
* Custom search engine option