@@ -4,6 +4,7 @@
 * Removed Browser Action [Chrome]
 * Autocompletion for recently executed commands [Chrome]
 * Options page more accessible via keyboard [Chrome]
+* Changed the default position to bottom
 
 1.6 (14/04/2010)
 
